--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ JWT_REFRESH_EXPIRY=30d
 
 # Google OAuth
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
-
+GOOGLE_CLIENT_SECRET=your-google-client-secret.apps.googleusercontent.com
 # OpenAI
 OPENAI_API_KEY=sk-your-openai-api-key
 OPENAI_MODEL=gpt-4o-mini
